--- a/gobotany/static/sass/_help.scss
+++ b/gobotany/static/sass/_help.scss
@@ -113,7 +113,7 @@ $image-box-shadow-color: rgba(0, 0, 0, 0.6);
     #plant-map-list {
 	    margin: 10px 0;
         + h2 {
-            padding-top: 36px;
+            padding-top: 48px;
         }
     }
     #group-section {
